@@ -258,3 +258,5 @@ Version 20080728.306 (Saturday, February 14, 2008)
    whether to ignore the textbox.
 
 Version ${Version} (${Date})
+ - Fixed an issue in Komodo IDE and Komodo Edit where AVIM would not recogize
+   SciMoz's wrapper frame, which is often focused instead of SciMoz itself.
